# django-simple-email-confirmation

./: .gitignore  .travis.yml  CHANGELOG  MANIFEST.in  Pipfile  README.rst  setup.cfg  setup.py  tox.ini
devproject/: settings.py  urls.py
devproject/devtest/: forms.py  views.py
devproject/emailconfirmation/: models.py  utils.py  views.py
devproject/templates/: base.html  homepage.html  login.html  logout.html  signup.html
devproject/templates/emailconfirmation/: confirm_email.html  email_confirmation_message.txt  email_confirmation_subject.txt
docs/: index.txt
emailconfirmation/: __init__.py  admin.py  models.py  signals.py  views.py
emailconfirmation/templates/emailconfirmation/: email_confirmation_message.txt  email_confirmation_subject.txt
example/example/: settings.py  urls.py
example/example_app/: apps.py  models.py  urls.py  views.py
example/example_app/migrations/: 0001_initial.py
example/example_app/templates/: base.html  index.html
simple_email_confirmation/: __init__.py  admin.py  apps.py  exceptions.py  mixins.py  models.py  settings.py  signals.py  tests.py  views.py
simple_email_confirmation/contrib/rest_framework/: permissions.py  serializers.py  urls.py  utils.py  views.py
simple_email_confirmation/migrations/: 0001_initial.py
simple_email_confirmation/south_migrations/: 0001_initial.py
simple_email_confirmation/test_project/: settings.py
simple_email_confirmation/tests/: tests.py
simpleemailconfirmation/: __init__.py  models.py
simpleemailconfirmation/test_project/: settings.py
(+6 files in other folders)
