[metadata]
name = django-simple-email-confirmation
version = attr:simple_email_confirmation.__version__
author = Mike Fogel
author_email = mike@fogel.ca
long_description = file:README.rst
description = Simple email confirmation for django.
url = https://github.com/mfogel/django-simple-email-confirmation
license = BSD
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities
    Framework :: Django

[options]
packages =
    simple_email_confirmation
    simple_email_confirmation.migrations
    simple_email_confirmation.tests
    simple_email_confirmation.tests.myproject
    simple_email_confirmation.tests.myproject.myapp
install_requires =
    django>=3.2
